project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crudapp-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crudapp
  template:
    metadata:
      labels:
        app: crudapp
    spec:
        - name: crudapp-image
          persistentVolumeClaim:
            claimName: crudapp-claim
      containers:
        - name: crudapp
          image: melimet/crudapp:latest
          volumeMounts:
          - name: crudapp-image
            mountPath: /usr/src/app/files
