project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crudapp-svc
spec:
  type: NodePort
  selector:
    app: crudapp
  ports:
    - name: http
      NodePort: 30080
      protocol: TCP
      port: 1234
      targetPort: 3000
